completed week 7 practical

--- a/Practicals2016/Prac06/dynamic_widgets.kv
+++ b/Practicals2016/Prac06/dynamic_widgets.kv
@@ -16,5 +16,8 @@ BoxLayout:
             text: "Create Widgets"
             on_release: app.create_widgets()
         Button:
+            text: "New Widgets"
+            on_release: app.add_widget()
+        Button:
             text: "Clear Widgets!"
             on_release: app.clear_all()
